src/trusted/validator_arm/testdata/bad/invalid_branch.dis
       0:	e1c12263 		bic	r2, r1, r3, ror #4
       4:	e12fff15 		bx	r5
